--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ services:
 
 env:
   matrix:
-  - ALPINE_VER=3.11 PYTHON_VER=3.6.5 TAGS=3.6,3,latest
+  - ALPINE_VER=3.11 PYTHON_VERSION=3.7 TAGS=3.7,3,latest
+  - ALPINE_VER=3.11 PYTHON_VERSION=3.6.5 TAGS=3.6
 
 script:
 - make 
